fix(mobile): fix scrolling and height layout on mobile
Closes #25

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -12,6 +12,7 @@ body,
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 16px;
   font-weight: 400;
+  -webkit-overflow-scrolling: touch;
 }
 
 input,
@@ -28,6 +29,10 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
     appearance: none;
     margin: 0;
+}
+
+.flex-nogrow {
+  flex: 0 0 auto;
 }
 
 .shadow-button {
